Fixed invisible right located parts of student detail

--- a/public/stylesheets/style_redesign.css
+++ b/public/stylesheets/style_redesign.css
@@ -23,6 +23,13 @@ body {
 	clear:right;
 }
 
+.right-visible
+{
+	float: right;
+	text-align: right;
+	clear:right;
+}
+
 .left
 {
 	float: left;
